--- a/WebLegemClient/src/common/components/wl-lista-doc-encontrado/wl-lista-doc-encontrado.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-doc-encontrado/wl-lista-doc-encontrado.tmpl.html
@@ -15,22 +15,18 @@
                     <p>Fecha de publicacion: <i>{{ datos.fecha  }} </i></p>
                 </div>
             </div>
-            <div class="btn-cancel-seleccion" ng-show="vm.ban_itemSelected"
-                 ng-click="vm.quitarSeleccion(); $event.stopPropagation();vm.togglePdf=false">
-                <span class="ico-times"></span>
+
+            <div >
+                <a class="link_tarjeta" ng-show="!vm.togglePdf" ng-click="vm.togglePdf = !vm.togglePdf ; $event.stopPropagation();">
+                    <span class="ico-eye"></span>Vista previa
+                </a>
+                <a class="link_tarjeta" ng-show="vm.togglePdf" ng-click="vm.togglePdf = !vm.togglePdf ; $event.stopPropagation();">
+                    <span class="ico-eye-slash"></span>Vista previa
+                </a>
             </div>
         </div>
     </div>
 
-</div>
-
-<div class="generic-box-horizontal">
-    <button class="btn_toggle" ng-click="vm.togglePdf = !vm.togglePdf" ng-class="vm.togglePdf ? 'activo' : '' " ng-show="vm.ban_itemSelected">
-        Vista previa
-    </button>
-    <button style="margin-left:10px;" class="btn_sin_ico" ng-if="vm.crearAnotacion" ng-show="vm.ban_itemSelected" ng-click="vm.crearAnotacion()">
-        Crear Anotacion
-    </button>
 </div>
 
 <iframe ng-show="vm.togglePdf"
