--- a/WebLegemClient/src/css/plantillas/layout_general.css
+++ b/WebLegemClient/src/css/plantillas/layout_general.css
@@ -54,8 +54,8 @@
     justify-content: flex-start;
     min-height: 100vh;
     width: 100%;
-    /*background-color: #e1e3e9;*/
-    background-image: url('../../recursos/cheap_diagonal_fabric.png');
+    background-color: #e1e3e9;
+    /*background-image: url('../../recursos/cheap_diagonal_fabric.png');*/
     /*background-color:#e9eaed;*/ /*azul facebook*/
 }
 
