--- a/WebLegemClient/src/common/directives/asociar-documento/template/procesando.html
+++ b/WebLegemClient/src/common/directives/asociar-documento/template/procesando.html
@@ -1,11 +1,14 @@
-﻿<div class="generic-box-vertical center">
-    <span class="ico-check-circle verde"></span>
-    <label class="texto_labels">Se creo la anotacion con exito :v</label>
+﻿<div style="display:flex;justify-content:center;">
+    <div class="circulo_carga mediano"></div>
+</div>
+<div class="generic-box-horizontal center">
+    <label class="texto_labels">Se creo la anotacion con exito</label>
+    <span class="ico-check-circle" style="font-size:large; color:greenyellow"></span>
 </div>
 
-<div class="generic-box-vertical center">
-    <span class="ico-check-circle verde"></span>
-    <label class="texto_labels">lamentablemente no se pudo realizar la operacion :(</label>
+<div class="generic-box-horizontal center">
+    <label class="texto_labels">Lamentablemente no se pudo realizar la operacion</label>
+    <span class="ico-times-circle" style="font-size:large; color:#ff2f2f"></span>
 </div>
 
 <div class="generic-box-horizontal flex-1 center" style="margin-top:15px;">
