--- a/WebLegemClient/src/app/anotacion/editar-anotacion/editar-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/editar-anotacion/editar-anotacion.tmpl.html
@@ -1,6 +1,4 @@
-﻿<wl-progreso id="editar_anotacion"  pasos="vm.pasos" actual="vm.actual" id-progreso="editar_anotacion"></wl-progreso>
-
-<!---------------------------------------------------------------------------------------------------------------------Paso1-->
+﻿<!---------------------------------------------------------------------------------------------------------------------Paso1-->
 <div class="box_father" ng-show="vm.index==0">
     <div class="box_left">
         <label class="ca_label_busqueda">{{vm.language.strings.BuscarDocumento}}:</label>
@@ -8,75 +6,53 @@
     </div>
     <div class="box_right">
         <label class="msj-error"> {{vm.language.strings.NoEncontroNingunDocumentoConIdentificacion}} </label>
-        <wl-lista-doc-encontrado>  </wl-lista-doc-encontrado>
+        <wl-lista-doc-encontrado seleccionar="vm.seleccionarDoc">  </wl-lista-doc-encontrado>
 
-        
+
     </div>
 </div>
 <!---------------------------------------------------------------------------------------------------------------------Paso2-->
 
 <div class="box_father" ng-show="vm.index==1">
 
-    <div class="box_left flex-3" ng-show="vm.ban_ver_pdf">
+    <div class="box_left flex-3">
         <label class="ca_label_busqueda">{{vm.language.strings.VistaPreviaDocumento}}:</label>
-        <iframe ng-show="vm.togglePdf=true"
-                src="http://docs.google.com/gview?url=http://victorpimentel.com/stuff/rubik.pdf&embedded=true"
+        <iframe src="recurso.pdf"
                 class="de-vpdf none-mt" frameborder="0"></iframe>
-
     </div>
 
     <div class="box_right">
-     
-        <wl-lista-anotaciones metodo="vm.comporLista">  </wl-lista-anotaciones>
-
-        <div class="box_duo_input">
-            <div>
-                <label class="texto_labels">{{vm.language.strings.TipoAnotacion}}:</label>
-                <div class="a_select">
-                    <select type="text" placeholder="{{vm.language.strings.EscribaEntidadEmisora}}" ng-model="vm.tipoDocumentoAux"
-                            ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
-                </div>
-            </div>
-            <div>
-                <label class="texto_labels">{{vm.language.strings.DescripcionAnotacion}}:</label>
-                <textarea class="a_text_area"></textarea>
-            </div>
-        </div>
-
+        <wl-lista-anotaciones editar="vm.editarAnotacion">  </wl-lista-anotaciones>
     </div>
 </div>
 <!---------------------------------------------------------------------------------------------------------------------Controles-->
 
-<div class="box_father">
+<div class="box_father" ng-if="vm.index == 1">
     <div class="box_right">
         <div class="divisor-pasos"><div></div></div>
         <div class="controles-crear-anotacion">
-            <button class="btn_toggle vista-previa-ed"
-                    ng-class="vm.ban_ver_pdf? 'activo' :''"
-                    ng-click="vm.ban_ver_pdf = !vm.ban_ver_pdf" ng-show="vm.index==1">
-                {{vm.language.strings.VistaPrevia}}
-            </button>
-            <span class="span-fill"> </span>
-
-            <button class="btn_sin_ico" ng-click="vm.backStep()" ng-hide="vm.index==0">
+            <button class="btn_sin_ico" ng-click="vm.backStep()">
                 {{vm.language.strings.Atras}}
-            </button>
-            <button class="btn_sin_ico" ng-click="vm.nextStep()" ng-hide="vm.index==1">
-                {{vm.language.strings.Siguiente}}
-            </button>
-            <button class="btn_sin_ico" ng-click="vm.ban_exito_edicion=true" ng-show="vm.index==1">
-                {{vm.language.strings.GuardarCambios}}
             </button>
         </div>
     </div>
-
-    <!-- ---------------------------------------------------------------------- -->
-    <wl-info show="vm.ban_exito_edicion" title="Exito">
-        <div class="a-modal-contenido">
-            <span class="ico-check-circle verde"></span>
-            <div>  {{vm.language.strings.SeGuardaronCambiosExito}}</div>
-        </div>
-    </wl-info>
-
 </div>
 
+<!-- Modales---------------------------------------------------------------------- -->
+<div class='a-modal' ng-if='vm.ban_confirmacion'>
+    <div class='a-modal-overlay' ng-click='vm.ban_confirmacion=false'></div><!--Simula la opacidad de fondo del dialogo-->
+    <div class='a-modal-dialog'>
+
+        <div class='a-modal-close verde'>
+            <div class="a-titulo-modal verde">Confirmación</div>
+            <button title="Cerrar dialogo" ng-click="vm.ban_confirmacion=false">
+                <span class="ico-times"></span>
+            </button>
+        </div>
+
+        <div class='a-modal-contenido'>
+            <div ng-include="vm.vistas"></div>
+        </div>
+
+    </div>
+</div>
