--- a/WebLegemClient/src/css/directivas/asociar_documento.css
+++ b/WebLegemClient/src/css/directivas/asociar_documento.css
@@ -10,11 +10,12 @@
 .resumen_asociar_doc > div:last-child{
     border: 2px solid #3c6690;
     padding:10px;
-    margin:10px;
+    margin-bottom:10px;
 }
 
 .flecha_rad{
     display:flex;
     align-items:center;
     height:100%;
+    margin:0 10px;
 }
