--- a/WebLegemClient/src/css/elementos/text_area.css
+++ b/WebLegemClient/src/css/elementos/text_area.css
@@ -25,8 +25,12 @@
     padding: 10px 10px;
     border:1px solid #aaa; 
     width:100%;
-    min-height:55px;
+    min-height:65px;
     resize:vertical;
+    text-align:justify;
+}
+.a_text_area p{
+    text-align:justify;
 }
 
 .a_text_area:hover {
