bug tipo anotaciones corrregido

--- a/WebLegemClient/src/app/administracion/tipo-anotacion/tipo-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-anotacion/tipo-anotacion.tmpl.html
@@ -1,7 +1,7 @@
 ﻿<div class="box_father">
     <div class="box_left">
         <wl-lista-tipos-anotacion seleccionar="vm.seleccionar"
-                lista="vm.tiposAnotaciones"
+                lista="vm.tiposAnotacion"
                 editando="vm.editando">
         </wl-lista-tipos-anotacion>
     </div>
